added: optimizing SEO

--- a/index.html
+++ b/index.html
@@ -4,7 +4,17 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Key System Technology Limited</title>
+    <title>Key System Technology Limited - Innovative Tech Solutions</title>
+    <meta
+      name="description"
+      content="Key System Technology Limited provides innovative technology solutions to help businesses improve decision-making, unlock new opportunities, and achieve transformative growth."
+    />
+    <meta
+      name="keywords"
+      content="technology solutions, business growth, decision-making, Key System Technology, digital transformation, cybersecurity, data warehouse, business intelligence"
+    />
+    <meta name="author" content="Victor Ejiogu" />
+    <meta name="robots" content="index, follow" />
   </head>
   <body>
     <div id="root"></div>
